fix imagewithtext height getting too large

--- a/frontend/components/blocks/ImageWithText.module.css
+++ b/frontend/components/blocks/ImageWithText.module.css
@@ -1,38 +1,38 @@
-.heading{
-    color: #014788;
-    font-size: 4rem;
-    align-content: center;
-    font-weight: bold;
+.heading {
+	color: #014788;
+	font-size: 3rem;
+	align-content: center;
+	font-weight: bold;
 }
 
-.content{
-    color: #014788;
-    font-size: 2rem;
+.content {
+	color: #014788;
+	font-size: 1.25rem;
+	max-width: 55ch;
 }
 .backgroundDots {
-    display: flex;
-    align-items: center;
-    background-color: #fab34a ;
-    background-image:  linear-gradient(
-        to bottom, #fab34adc, #fab44adc
-    ), url(../../assets/Background_Dots.png);
+	display: flex;
+	align-items: center;
+	background-color: #fab34a;
+	background-image: linear-gradient(to bottom, #fab34aef, #fab44aef),
+		url(../../assets/Background_Dots.png);
 }
 
 .backgroundCol {
-    padding: 3rem;
+	padding: 3rem;
 }
 .backgroundImg {
-     display: "block" ;
-     width: 100%;
-    }
+	object-fit: cover;
+	max-height: 80vh;
+	width: 100%;
+}
 
 .Underline {
-    width:10rem;
-    text-align:left;
-    margin-left:0;
-    border-width: 0.2rem;
-    border-radius: 0.2rem;
-    border-color:#014788;
-    margin-bottom: 2rem;
-
+	width: 10rem;
+	text-align: left;
+	margin-left: 0;
+	border-width: 0.2rem;
+	border-radius: 0.2rem;
+	border-color: #014788;
+	margin-bottom: 2rem;
 }
